--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@aspnet/signalr": "^1.1.4",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "file-saver": "^1.3.8",
@@ -29,9 +30,9 @@
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
     "signalr": "^2.4.0",
     "ts-md5": "^1.2.4",
+    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
