--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^3.1.4",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "popper": "^1.0.1",
@@ -33,8 +34,8 @@
     "signalr": "^2.4.1",
     "ts-md5": "^1.2.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "typescript": "~3.4.5"
+    "typescript": "~3.4.5",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.1",
