--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "@aspnet/signalr": "^1.1.4",
+    "@types/bootstrap": "^4.3.1",
+    "@types/jquery": "^3.3.31",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
     "file-saver": "^2.0.2",
@@ -44,6 +46,10 @@
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~12.6.3",
+
+    "@types/bootstrap": "^4.3.1",
+    "@types/jquery": "^3.3.31",
+
     "codelyzer": "~5.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
