--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.7",
     "@angular/animations": "~8.1.1",
     "@angular/cli": "^8.1.1",
     "@angular/common": "~8.1.1",
@@ -46,10 +47,8 @@
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~12.6.3",
-
     "@types/bootstrap": "^4.3.1",
     "@types/jquery": "^3.3.31",
-
     "codelyzer": "~5.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
