--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "@angular-devkit/build-angular": "~0.801.1",
     "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
+    "@types/bootstrap": "^4.3.1",
     "@types/file-saver": "^2.0.1",
+    "@types/googlemaps": "^3.37.4",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~12.6.3",
-    "@types/bootstrap": "^4.3.1",
     "@types/jquery": "^3.3.31",
+    "@types/node": "~12.6.3",
     "codelyzer": "~5.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
