--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/jquery": "^3.3.31",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
+    "cytoscape": "^3.9.1",
+    "cytoscape-context-menus": "^3.0.6",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
