--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^3.1.4",
     "cytoscape": "^3.9.1",
     "cytoscape-context-menus": "^3.0.6",
+    "cytoscape-popper": "^1.0.4",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
@@ -36,6 +37,7 @@
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.2",
     "signalr": "^2.4.1",
+    "tippy.js": "^4.3.5",
     "ts-md5": "^1.2.4",
     "tslib": "^1.10.0",
     "typescript": "~3.4.5",
