--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oss-spa",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -12,15 +13,15 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.7",
-    "@angular/animations": "~8.2.14",
-    "@angular/cli": "^8.3.28",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/animations": "~9.1.12",
+    "@angular/cli": "^9.1.11",
+    "@angular/common": "~9.1.12",
+    "@angular/compiler": "~9.1.12",
+    "@angular/core": "~9.1.12",
+    "@angular/forms": "~9.1.12",
+    "@angular/platform-browser": "~9.1.12",
+    "@angular/platform-browser-dynamic": "~9.1.12",
+    "@angular/router": "~9.1.12",
     "@aspnet/signalr": "^1.1.4",
     "@types/bootstrap": "^4.3.1",
     "@types/jquery": "^3.3.31",
@@ -40,20 +41,20 @@
     "tippy.js": "^4.3.5",
     "ts-md5": "^1.2.4",
     "tslib": "^1.10.0",
-    "typescript": "~3.5.3",
-    "zone.js": "~0.9.1"
+    "typescript": "~3.8.3",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.28",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.901.11",
+    "@angular/compiler-cli": "~9.1.12",
+    "@angular/language-service": "~9.1.12",
     "@types/bootstrap": "^4.3.1",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/jquery": "^3.3.31",
-    "@types/node": "~12.6.3",
-    "codelyzer": "~5.1.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
