--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.7",
-    "@angular/animations": "~9.1.12",
-    "@angular/cli": "^9.1.11",
-    "@angular/common": "~9.1.12",
-    "@angular/compiler": "~9.1.12",
-    "@angular/core": "~9.1.12",
-    "@angular/forms": "~9.1.12",
-    "@angular/platform-browser": "~9.1.12",
-    "@angular/platform-browser-dynamic": "~9.1.12",
-    "@angular/router": "~9.1.12",
+    "@angular/animations": "~10.0.7",
+    "@angular/cli": "^10.0.5",
+    "@angular/common": "~10.0.7",
+    "@angular/compiler": "~10.0.7",
+    "@angular/core": "~10.0.7",
+    "@angular/forms": "~10.0.7",
+    "@angular/platform-browser": "~10.0.7",
+    "@angular/platform-browser-dynamic": "~10.0.7",
+    "@angular/router": "~10.0.7",
     "@aspnet/signalr": "^1.1.4",
     "@types/bootstrap": "^4.3.1",
     "@types/jquery": "^3.3.31",
@@ -40,30 +40,30 @@
     "signalr": "^2.4.1",
     "tippy.js": "^4.3.5",
     "ts-md5": "^1.2.4",
-    "tslib": "^1.10.0",
-    "typescript": "~3.8.3",
+    "tslib": "^2.0.0",
+    "typescript": "~3.9.7",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.11",
-    "@angular/compiler-cli": "~9.1.12",
-    "@angular/language-service": "~9.1.12",
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular/compiler-cli": "~10.0.7",
+    "@angular/language-service": "~10.0.7",
     "@types/bootstrap": "^4.3.1",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/jquery": "^3.3.31",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.2.0",
-    "karma-chrome-launcher": "~3.0.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "^5.18.0"
+    "tslint": "~6.1.0"
   }
 }
