--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,11 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/ngx-extended-pdf-viewer/assets/",
+                "output": "/assets/"
+              },
               "src/web.config"
             ],
             "styles": [
