--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "moment": "^2.24.0",
+    "ngx-extended-pdf-viewer": "^7.0.0",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.6.0",
@@ -45,7 +46,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular-devkit/build-angular": "^0.1100.4",
     "@angular/compiler-cli": "~10.0.7",
     "@angular/language-service": "~10.0.7",
     "@types/bootstrap": "^4.3.1",
