--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@aspnet/signalr": "^1.1.4",
     "@types/bootstrap": "^4.3.1",
     "@types/jquery": "^3.3.31",
+    "@w11k/ngx-componentdestroyed": "^5.0.2",
+    "@w11k/rx-ninja": "^4.5.3",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
     "file-saver": "^2.0.2",
