--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             ],
             "styles": [
               "node_modules/font-awesome/css/font-awesome.css",
-              "src/styles.css"
+              "src/sass/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
