--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             ],
             "styles": [
               "node_modules/font-awesome/css/font-awesome.css",
-              "src/sass/styles.css"
+              "src/sass/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
@@ -94,7 +94,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/sass/styles.scss"
             ],
             "scripts": [],
             "assets": [
